// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render banner banner content 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew -view1"
  onClick={[Function]}
  style={
    Object {
      "height": "260px",
    }
  }
>
  <img
    loading="lazy"
    src="url0"
    style={
      Object {
        "height": "100%",
        "objectFit": "cover",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner banner content tablet 1`] = `
<div
  className="vxteaser-banner vxteaser--has-no-skew -view2"
  onClick={[Function]}
  style={
    Object {
      "height": "500px",
    }
  }
>
  <img
    loading="lazy"
    src="url1"
    style={
      Object {
        "height": "260px",
        "objectFit": "cover",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
    windowWidth={768}
  />
</div>
`;

exports[`render banner banner theme 1`] = `
<div
  className="vxteaser-banner vxteaser--has-skew -view1 -theme-white -view2--bg-auto"
  onClick={[Function]}
  style={
    Object {
      "height": "260px",
    }
  }
>
  <img
    loading="lazy"
    src="url0"
    style={
      Object {
        "height": "100%",
        "objectFit": "cover",
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
  />
  <BannerContent
    config={
      Object {
        "fixedHeights": Array [
          Object {
            "backgroundUrl": "url0",
            "height": 500,
          },
          Object {
            "backgroundUrl": "url1",
            "greaterThan": 1200,
            "height": 260,
          },
        ],
      }
    }
  />
</div>
`;

exports[`render banner empty banner 1`] = `""`;
